Adding some git code utility to the index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>How to use Git</h1>
+
+    <ul>
+        <li><b>git clone</b>: to clone your repository from github to your local workstation</li>
+        <li><b>git add</b>: to add a file from your workstation to the repository</li>
+        <li><b>git commit</b>: to add a file from your workstation to the repository and keep track of changes</li>
+        <li><b>git push</b>: to synchronize your commit file you've changed to the online github</li>
+    </ul>
 </body>
 </html>
