--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><b>git add</b>: to add a file from your workstation to the repository</li>
         <li><b>git commit</b>: to add a file from your workstation to the repository and keep track of changes</li>
         <li><b>git push</b>: to synchronize your commit file you've changed to the online github</li>
-        <li><b>git pull</b>: to synchronize from github onilen to local </li>
+        <li><b>git pull</b>: to synchronize from github to local </li>
     </ul>
 </body>
 </html>
